<resources>
    <string name="app_name">My Account Book</string>

    <string-array name="log_type">
        <item>Food</item>
        <item>Transportation</item>
        <item>Health</item>
        <item>Social Life</item>
        <item>Entertainment</item>
        <item>Living</item>
    </string-array>
    <string-array name="type_array">
        <item>ALL</item>
        <item>Food</item>
        <item>Transportation</item>
        <item>Health</item>
        <item>Social Life</item>
        <item>Entertainment</item>
        <item>Living</item>
    </string-array>
    <string-array name="inoutcome">
        <item>ALL</item>
        <item>income</item>
        <item>spend</item>
    </string-array>
    <string-array name="days_array">
        <item>ALL</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="months_array">
        <item>ALL</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="years_array">
        <item>ALL</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
    </string-array>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_delete">DELETE</string>
    <string name="check_delete">Are you sure to delete :</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="alert_empty_name">Name cannot be empty</string>
    <string name="alert_name_number">Name cannot start with number</string>
    <string name="title_error">ERROR</string>
    <string name="alert_name_same">It already exists</string>
    <string name="alert_amount_empty">Amount cannot be empty</string>
    <string name="alert_date_format">Please re-input the date in DDMMYYYY</string>
    <string name="alert_date_invalid">Invaliad date</string>
    <string name="alert_no_record">NO RECORD</string>
    <string name="alert_select_type">Please select in/outcome and complete the search action</string>
    <string name="income">income</string>
    <string name="spend">spend</string>
    <string name="title_income">INCOME</string>
    <string name="title_spend">SPEND</string>
    <string name="total">TOTAL:</string>
    <string name="food">Food</string>
    <string name="Transport">Transportation</string>
    <string name="Health">Health</string>
    <string name="SocialLife">Social Life</string>
    <string name="Entertainment">Entertainment</string>
    <string name="Living">Living</string>
    <string name="all">ALL</string>
    <string name="new_notebook">New Notebook</string>
    <string name="modify">Modify</string>
    <string name="new_record">New Record</string>
    <string name="statistics">Statistics</string>
    <string name="amount">Amount</string>
    <string name="date_format">DDMMYYYY</string>
    <string name="save">SAVE</string>
    <string name="name">NAME</string>
    <string name="discript">Discript</string>
    <string name="ori_name">Origin Name</string>
    <string name="new_name">New Name</string>
    <string name="getDiscript">Get Discription</string>
    <string name="search">Search</string>
    <string name="Delete">Delete</string>

</resources>