<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/old_table_name_m"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ori_name"
        android:minHeight="45dp"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_200"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/new_table_name_m"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_name"
        android:minHeight="45dp"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_200"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/table_info_m"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/grey"
        android:gravity="top|left"
        android:hint="@string/discript"
        android:minHeight="145dp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHint="@color/teal_200"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_get_info_m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:onClick="showEditDialog"
        android:text="@string/getDiscript" />

    <Button
        android:id="@+id/btn_save_m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:onClick="showEditDialog"
        android:text="@string/save" />

    <Button
        android:id="@+id/btn_cancel_m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/cancel" />

</LinearLayout >