<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="600dp"
    android:orientation="vertical"
    android:background="#ffffff00">

    <EditText
        android:id="@+id/new_table_name_m1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_name"
        android:minHeight="45dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/new_table_info_m1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/grey"
        android:gravity="top|left"
        android:hint="@string/discript"
        android:minHeight="145dp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/Delete" />

    <Button
        android:id="@+id/btn_save_m1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/save" />

    <Button
        android:id="@+id/btn_cancel_m1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:onClick="hide"
        android:text="@string/cancel" />

</LinearLayout >